--- a/HuaShanApp/app/src/main/res/layout/fragment_finance.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_finance.xml
@@ -17,61 +17,61 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-        <LinearLayout
-            android:id="@+id/title_ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/title_color"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_heightPercent="8%"
-            >
+        <!--<LinearLayout-->
+            <!--android:id="@+id/title_ll"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/title_color"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:orientation="horizontal"-->
+            <!--app:layout_heightPercent="8%"-->
+            <!--&gt;-->
 
-            <android.support.percent.PercentRelativeLayout
-                android:id="@+id/title_back"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingLeft="20dp">
+            <!--<android.support.percent.PercentRelativeLayout-->
+                <!--android:id="@+id/title_back"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:paddingLeft="20dp">-->
 
-                <ImageView
+                <!--<ImageView-->
 
-                    android:layout_width="0dp"
-                    app:layout_widthPercent="7%"
-                    android:layout_height="match_parent"
-                    />
+                    <!--android:layout_width="0dp"-->
+                    <!--app:layout_widthPercent="7%"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--/>-->
 
-            </android.support.percent.PercentRelativeLayout>
-            <TextView
-                android:id="@+id/title_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="金融"
-                android:textColor="#fff"
-                android:textSize="@dimen/title_text_size"/>
+            <!--</android.support.percent.PercentRelativeLayout>-->
+            <!--<TextView-->
+                <!--android:id="@+id/title_text"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1"-->
+                <!--android:gravity="center"-->
+                <!--android:text="金融"-->
+                <!--android:textColor="#fff"-->
+                <!--android:textSize="@dimen/title_text_size"/>-->
 
-            <android.support.percent.PercentRelativeLayout
-                android:id="@+id/add_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingRight="20dp">
+            <!--<android.support.percent.PercentRelativeLayout-->
+                <!--android:id="@+id/add_btn"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:paddingRight="20dp">-->
 
-                <ImageView
+                <!--<ImageView-->
 
-                    android:layout_width="0dp"
-                    app:layout_widthPercent="5%"
-                    android:layout_height="match_parent"
+                    <!--android:layout_width="0dp"-->
+                    <!--app:layout_widthPercent="5%"-->
+                    <!--android:layout_height="match_parent"-->
 
-                    />
-            </android.support.percent.PercentRelativeLayout>
-        </LinearLayout>
+                    <!--/>-->
+            <!--</android.support.percent.PercentRelativeLayout>-->
+        <!--</LinearLayout>-->
 
         <android.support.percent.PercentFrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
-            app:layout_heightPercent="92%"
+            app:layout_heightPercent="100%"
             android:background="#fff"
 
             >
