--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="line_color">#eeeeee</color>
 
     <color name="title_color">#0894EC</color>
+
+    <!--homeactivity-->
+    <color name="homeactivity_textcolor_selected">#0894EC</color>
+
+    <color name="homeactivity_textcolor_default">#000</color>
 </resources>
