--- a/HuaShanApp/app/src/main/res/layout/activity_home.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_home.xml
@@ -77,7 +77,7 @@
 
             <com.example.utils.custom.ScrollableViewPager
                 android:id="@+id/viewpager_home"
-                android:background="#000"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -90,6 +90,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:background="@color/line_color"
                 android:layout_above="@+id/bottom_home"
                 />
 
