--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="line_color">#eeeeee</color>
+    <color name="line_color">#dddddd</color>
 
     <color name="title_color">#0894EC</color>
 
