--- a/HuaShanApp/app/src/main/res/layout/fragment_finance.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_finance.xml
@@ -76,13 +76,30 @@
 
             >
 
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="30%"
+                >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="financefragment"
-                />
+                <com.example.utils.custom.views.AutoScrollViewPager
+                    android:id="@+id/scroll_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
+                </com.example.utils.custom.views.AutoScrollViewPager>
+
+                <com.example.utils.custom.views.ViewGroupIndicator
+                    xmlns:indicator="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/scroll_pager_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_gravity="bottom"
+                    indicator:selected_color="#F00"
+                    indicator:unselected_color="#ffffff"
+                    indicator:distance_from_two_indicator="10dp"
+                    indicator:radius="5dp"/>
+
+            </android.support.percent.PercentFrameLayout>
 
 
         </android.support.percent.PercentFrameLayout>
