--- a/HuaShanApp/app/src/main/res/layout/fragment_finance.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_finance.xml
@@ -16,92 +16,265 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/all_activity_background"
         >
         <!--<LinearLayout-->
-            <!--android:id="@+id/title_ll"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@color/title_color"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:orientation="horizontal"-->
-            <!--app:layout_heightPercent="8%"-->
-            <!--&gt;-->
+        <!--android:id="@+id/title_ll"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/title_color"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:orientation="horizontal"-->
+        <!--app:layout_heightPercent="8%"-->
+        <!--&gt;-->
 
-            <!--<android.support.percent.PercentRelativeLayout-->
-                <!--android:id="@+id/title_back"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:paddingLeft="20dp">-->
+        <!--<android.support.percent.PercentRelativeLayout-->
+        <!--android:id="@+id/title_back"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:paddingLeft="20dp">-->
 
-                <!--<ImageView-->
+        <!--<ImageView-->
 
-                    <!--android:layout_width="0dp"-->
-                    <!--app:layout_widthPercent="7%"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--/>-->
+        <!--android:layout_width="0dp"-->
+        <!--app:layout_widthPercent="7%"-->
+        <!--android:layout_height="match_parent"-->
+        <!--/>-->
 
-            <!--</android.support.percent.PercentRelativeLayout>-->
-            <!--<TextView-->
-                <!--android:id="@+id/title_text"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_weight="1"-->
-                <!--android:gravity="center"-->
-                <!--android:text="金融"-->
-                <!--android:textColor="#fff"-->
-                <!--android:textSize="@dimen/title_text_size"/>-->
+        <!--</android.support.percent.PercentRelativeLayout>-->
+        <!--<TextView-->
+        <!--android:id="@+id/title_text"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:gravity="center"-->
+        <!--android:text="金融"-->
+        <!--android:textColor="#fff"-->
+        <!--android:textSize="@dimen/title_text_size"/>-->
 
-            <!--<android.support.percent.PercentRelativeLayout-->
-                <!--android:id="@+id/add_btn"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:paddingRight="20dp">-->
+        <!--<android.support.percent.PercentRelativeLayout-->
+        <!--android:id="@+id/add_btn"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:paddingRight="20dp">-->
 
-                <!--<ImageView-->
+        <!--<ImageView-->
 
-                    <!--android:layout_width="0dp"-->
-                    <!--app:layout_widthPercent="5%"-->
-                    <!--android:layout_height="match_parent"-->
+        <!--android:layout_width="0dp"-->
+        <!--app:layout_widthPercent="5%"-->
+        <!--android:layout_height="match_parent"-->
 
-                    <!--/>-->
-            <!--</android.support.percent.PercentRelativeLayout>-->
+        <!--/>-->
+        <!--</android.support.percent.PercentRelativeLayout>-->
         <!--</LinearLayout>-->
-
-        <android.support.percent.PercentFrameLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/title_ll"
-            app:layout_heightPercent="100%"
-            android:background="#fff"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
 
-            >
 
-            <android.support.percent.PercentFrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                app:layout_heightPercent="30%"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/title_ll"
+                app:layout_heightPercent="100%"
+                android:orientation="vertical"
                 >
 
-                <com.example.utils.custom.views.AutoScrollViewPager
-                    android:id="@+id/scroll_pager"
+                <!--滚动广告条-->
+                <android.support.percent.PercentFrameLayout
+                    android:id="@+id/pf_rollviewpager"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="150dp"
+                    app:layout_heightPercent="30%"
+                    >
 
-                </com.example.utils.custom.views.AutoScrollViewPager>
+                    <com.example.utils.custom.views.AutoScrollViewPager
+                        android:id="@+id/scroll_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="#cfa">
 
-                <com.example.utils.custom.views.ViewGroupIndicator
-                    xmlns:indicator="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/scroll_pager_indicator"
+                    </com.example.utils.custom.views.AutoScrollViewPager>
+
+                    <com.example.utils.custom.views.ViewGroupIndicator
+                        xmlns:indicator="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/scroll_pager_indicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_gravity="bottom"
+                        indicator:selected_color="#F00"
+                        indicator:unselected_color="#ffffff"
+                        indicator:distance_from_two_indicator="10dp"
+                        indicator:radius="5dp"/>
+
+                </android.support.percent.PercentFrameLayout>
+
+                <View
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_gravity="bottom"
-                    indicator:selected_color="#F00"
-                    indicator:unselected_color="#ffffff"
-                    indicator:distance_from_two_indicator="10dp"
-                    indicator:radius="5dp"/>
+                    android:layout_height="10dp"
+                    ></View>
 
-            </android.support.percent.PercentFrameLayout>
+                <!--投资计算器-->
+                <android.support.percent.PercentFrameLayout
+                    android:id="@+id/pf_calculator"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    app:layout_heightPercent="30%"
+                    android:layout_below="@+id/pf_rollviewpager"
+                    android:background="#caf">
+
+                    <android.support.percent.PercentFrameLayout
+                        android:layout_width="match_parent"
+                        app:layout_heightPercent="70%"
+                        android:layout_gravity="top"
+                        >
+                        <LinearLayout
+                            app:layout_widthPercent = "50%"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_gravity="left|center_vertical"
+                            android:gravity="center_horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="50915151.00"
+                                android:textSize="@dimen/financefragment_calculator_text_size_1"
+                                android:textColor="@color/financefragment_calculator_text_color"
+                                />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="平台投资总金额(元)"
+                                android:textSize="@dimen/financefragment_calculator_text_size_2"
+                                android:textColor="@color/financefragment_calculator_text_color"
+                                />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            app:layout_widthPercent = "50%"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center_vertical"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="1108260.92"
+                                android:textSize="@dimen/financefragment_calculator_text_size_1"
+                                android:textColor="@color/financefragment_calculator_text_color"
+                                />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="累计为用户赚取(元)"
+                                android:textSize="@dimen/financefragment_calculator_text_size_2"
+                                android:textColor="@color/financefragment_calculator_text_color"
+                                />
+
+                        </LinearLayout>
+
+                    </android.support.percent.PercentFrameLayout>
+
+                    <android.support.percent.PercentFrameLayout
+                        android:layout_width="match_parent"
+                        app:layout_heightPercent="40%"
+                        android:layout_gravity="bottom"
+                        >
+
+                        <TextView
+                            android:id="@+id/btn_calculator"
+                            app:layout_widthPercent = "55%"
+                            app:layout_heightPercent="60%"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:background="@drawable/bg_fillet_0894ec_5dp"
+                            android:textColor="@color/financefragment_calculator_text_color"
+                            android:text="计算器"
+                            />
+
+                    </android.support.percent.PercentFrameLayout>
+
+                </android.support.percent.PercentFrameLayout>
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    ></View>
 
 
-        </android.support.percent.PercentFrameLayout>
+                <!--推荐投资-->
+                <android.support.percent.PercentFrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="280dp"
+                    android:padding="10dp">
+
+
+
+                    <android.support.percent.PercentFrameLayout
+                        android:layout_width="match_parent"
+                        app:layout_heightPercent="85%"
+                        android:layout_gravity="bottom"
+                        android:background="#FFF">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            app:layout_heightPercent="20%"
+                            android:background="#caa"
+                            android:layout_gravity="top"
+                            >
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            app:layout_heightPercent="60%"
+                            android:background="#eea"
+                            android:layout_gravity="center_vertical"
+                            >
+
+                        </LinearLayout>
+                        <android.support.percent.PercentFrameLayout
+                            android:layout_width="match_parent"
+                            app:layout_heightPercent="20%"
+                            android:layout_gravity="bottom"
+                            android:background="#cfa"
+
+                            >
+
+                            <TextView
+                                app:layout_widthPercent = "45%"
+                                app:layout_heightPercent="75%"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:background="@drawable/bg_fillet_0894ec_5dp"
+                                android:textColor="@color/financefragment_calculator_text_color"
+                                android:text="立即投资"
+                                />
+
+                        </android.support.percent.PercentFrameLayout>
+                    </android.support.percent.PercentFrameLayout>
+
+                    <TextView
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:background="@drawable/bg_fillet_0894ec_360dp"
+                        android:gravity="center"
+                        android:text="推荐"
+                        android:textColor="#fff"
+                        android:textSize="@dimen/app_text_size"
+                        />
+
+                </android.support.percent.PercentFrameLayout>
+
+
+
+            </LinearLayout>
+
+        </ScrollView>
     </android.support.percent.PercentRelativeLayout>
 </layout>
