--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -4,7 +4,13 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="app_text_size">18dp</dimen>
+
     <dimen name="title_text_size">15dp</dimen>
     <!--homeactivity-->
     <dimen name="homeactivity_bottom_text_size">15dp</dimen>
+
+    <!--finance-->
+    <dimen name="financefragment_calculator_text_size_1">19dp</dimen>
+    <dimen name="financefragment_calculator_text_size_2">13dp</dimen>
 </resources>
