--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -13,4 +13,7 @@
     <!--finance-->
     <dimen name="financefragment_calculator_text_size_1">19dp</dimen>
     <dimen name="financefragment_calculator_text_size_2">13dp</dimen>
+
+    <dimen name="financefragment_Recommend_text_size_1">17dp</dimen>
+    <dimen name="financefragment_Recommend_text_size_2">10dp</dimen>
 </resources>
