--- a/HuaShanApp/app/src/main/res/layout/fragment_manage.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_manage.xml
@@ -74,12 +74,20 @@
 
                     >
 
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/manage_titlebar_rl"
+                            android:layout_width="match_parent"
+                            app:layout_heightPercent="10%"
+                            android:background="@color/manage_titlebar_bg_color">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="managefragment"
-                        />
+                        </android.support.v7.widget.RecyclerView>
+
+                    <android.support.v4.widget.SwipeRefreshLayout
+                        android:layout_width="match_parent"
+                        app:layout_heightPercent="90%">
+
+
+                    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 
