--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -20,4 +20,10 @@
 
     <!--manage-->
     <color name="manage_titlebar_bg_color">#cfa</color>
+
+    <!--login-->
+    <color name="login_hint_text_color">#d0d0d0</color>
+    <color name="login_content_line_color">#8e8e8e</color>
+
+    <color name="login_btn_text_color">#0894EC</color>
 </resources>
