--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -16,4 +16,7 @@
 
     <dimen name="financefragment_Recommend_text_size_1">17dp</dimen>
     <dimen name="financefragment_Recommend_text_size_2">10dp</dimen>
+
+    <!--login-->
+    <dimen name="login_text_size">15dp</dimen>
 </resources>
