--- a/HuaShanApp/app/src/main/res/layout/layout_project_content_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_project_content_item.xml
@@ -3,18 +3,214 @@
     android:id="@+id/cv_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="140dp"
     android:layout_margin="8dp"
     android:descendantFocusability="blocksDescendants"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardCornerRadius="10dp"
 
-    <TextView
-        android:id="@+id/item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        tools:text="item12"/>
+    card_view:contentPaddingTop="5dp"
+    >
+
+    <android.support.percent.PercentFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
+
+        <LinearLayout
+            app:layout_widthPercent="25%"
+            app:layout_heightPercent="50%"
+            app:layout_marginLeftPercent="5%"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:background="#2894ff"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="年化收入"
+                android:textSize="@dimen/manage_content_item_text_size_1"
+                android:id="@+id/textView" />
+
+        </LinearLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            app:layout_widthPercent="25%"
+            app:layout_heightPercent="35%"
+            app:layout_marginTopPercent="50%"
+            app:layout_marginLeftPercent="5%"
+            >
+
+            <TextView
+                android:id="@+id/tv_1_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_1_1"
+                android:layout_centerInParent="true"
+                android:text="8.50"
+                android:textSize="@dimen/financefragment_Recommend_text_size_1"
+                android:textColor="#0894EC"
+                />
+
+            <TextView
+                android:id="@+id/tv_1_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="%"
+                android:textSize="@dimen/financefragment_Recommend_text_size_2"
+                android:layout_toRightOf="@+id/tv_1_2"
+                android:layout_toEndOf="@+id/tv_1_2" />
+        </android.support.percent.PercentRelativeLayout>
+
+
+        <LinearLayout
+            app:layout_widthPercent="25%"
+            app:layout_heightPercent="50%"
+
+            android:orientation="horizontal"
+            app:layout_marginLeftPercent="30%"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:background="#93ff93"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="项目期限"
+                android:textSize="@dimen/manage_content_item_text_size_1"/>
+
+        </LinearLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            app:layout_widthPercent="25%"
+            app:layout_heightPercent="35%"
+            app:layout_marginTopPercent="50%"
+            app:layout_marginLeftPercent="30%"
+            >
+
+            <TextView
+                android:id="@+id/tv_2_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_2_1"
+                android:layout_centerInParent="true"
+                android:text="1"
+                android:textSize="@dimen/financefragment_Recommend_text_size_1"
+                android:textColor="#F75000"/>
+
+            <TextView
+                android:id="@+id/tv_2_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_2_2"
+                android:layout_centerVertical="true"
+                android:text="个月"
+                android:textSize="@dimen/financefragment_Recommend_text_size_2"/>
+        </android.support.percent.PercentRelativeLayout>
+
+        <LinearLayout
+            app:layout_widthPercent="25%"
+            app:layout_heightPercent="50%"
+
+            android:orientation="horizontal"
+            app:layout_marginLeftPercent="55%"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:background="#ff8000"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="项目规模"
+                android:textSize="@dimen/manage_content_item_text_size_1"/>
+
+        </LinearLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            app:layout_widthPercent="25%"
+            app:layout_heightPercent="35%"
+            app:layout_marginTopPercent="50%"
+            app:layout_marginLeftPercent="55%"
+            >
+
+            <TextView
+                android:id="@+id/tv_3_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_3_1"
+                android:layout_centerInParent="true"
+                android:text="5.00"
+                android:textSize="@dimen/financefragment_Recommend_text_size_1"/>
+
+            <TextView
+                android:id="@+id/tv_3_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_3_2"
+                android:layout_centerVertical="true"
+                android:text="万"
+                android:textSize="@dimen/financefragment_Recommend_text_size_2"/>
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentFrameLayout
+            app:layout_widthPercent="18%"
+            app:layout_heightPercent="100%"
+            android:layout_gravity="right"
+            >
+
+            <com.example.utils.custom.views.PercentLemon
+                android:id="@+id/percentLemon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_gravity="center"
+                app:percent="17.9"
+                app:skinDepth="15"
+                />
+
+        </android.support.percent.PercentFrameLayout>
+
+
+    </android.support.percent.PercentFrameLayout>
+
+    <android.support.percent.PercentFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom"
+        >
+        <ImageView
+            app:layout_widthPercent="95%"
+            android:layout_height="1dp"
+            android:background="#d0d0d0"
+            android:layout_gravity="top|center_horizontal"/>
+
+        <ImageView
+            app:layout_widthPercent="5%"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            app:layout_marginLeftPercent="5%"
+            android:background="#ff8000"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_marginLeftPercent="11%"
+            android:layout_gravity="center_vertical"
+            android:text="经营周转(PX2016-037)"/>
+
+    </android.support.percent.PercentFrameLayout>
+
 </android.support.v7.widget.CardView>
+
