--- a/HuaShanApp/app/src/main/res/layout/fragment_manage.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_manage.xml
@@ -70,7 +70,7 @@
                     android:layout_height="match_parent"
                     android:layout_below="@+id/title_ll"
                     app:layout_heightPercent="100%"
-                    android:background="#fff"
+                    android:background="@color/all_activity_background"
 
                     >
 
@@ -90,12 +90,12 @@
                             app:layout_heightPercent="90%"
                             android:layout_gravity="bottom">
 
-                            <android.support.v7.widget.RecyclerView
+                            <com.example.utils.custom.RefreshRecyclerView
                                 android:id="@+id/content_rl"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
-                            </android.support.v7.widget.RecyclerView>
+                            </com.example.utils.custom.RefreshRecyclerView>
 
                         </android.support.v4.widget.SwipeRefreshLayout>
 
