--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="financefragment_calculator_text_color">#FFFFFF</color>
 
     <!--manage-->
-    <color name="manage_titlebar_bg_color">#cfa</color>
+    <color name="manage_titlebar_bg_color">#fff</color>
 
     <!--login-->
     <color name="login_hint_text_color">#d0d0d0</color>
