--- a/HuaShanApp/app/src/main/res/layout/fragment_my.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_my.xml
@@ -68,19 +68,165 @@
         <android.support.percent.PercentFrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/title_ll"
             app:layout_heightPercent="100%"
-            android:background="#fff"
+            android:background="@color/all_activity_background"
 
-            >
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="myfragment"
-                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="25%"
+                app:layout_marginTopPercent="2%"
+                android:background="#cff"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/head_img"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#aca"
+                    />
+
+                <android.support.percent.PercentFrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#eea">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="111111"/>
+
+                   <LinearLayout
+                       app:layout_widthPercent="50%"
+                       app:layout_heightPercent="45%"
+                       app:layout_marginTopPercent="5%"
+                       android:layout_gravity="right|top"
+
+                       android:orientation="vertical">
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_weight="1"
+                           android:gravity="center_vertical"
+                           android:text="投资总额(元)"
+                           android:textSize="@dimen/my_pf1_content_text_size_1"
+                           android:textColor="@color/my_pf1_content_text_color_1"/>
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:layout_weight="1"
+                           android:text="0.00"
+                           android:textSize="@dimen/my_pf1_content_text_size_2"
+                           android:textColor="@color/my_pf1_content_text_color_2"/>
+
+                   </LinearLayout>
+
+
+                    <LinearLayout
+                        app:layout_widthPercent="50%"
+                        app:layout_heightPercent="45%"
+                        app:layout_marginBottomPercent="5%"
+                        android:layout_gravity="right|bottom"
+
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:text="借款总额(元)"
+                            android:textSize="@dimen/my_pf1_content_text_size_1"
+                            android:textColor="@color/my_pf1_content_text_color_1"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:text="0.00"
+                            android:textSize="@dimen/my_pf1_content_text_size_2"
+                            android:textColor="@color/my_pf1_content_text_color_2"/>
+
+                    </LinearLayout>
+
+
+                </android.support.percent.PercentFrameLayout>
+
+            </LinearLayout>
+
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="8%"
+                app:layout_marginTopPercent="27%"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:background="#ff8000">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|left"
+                    android:text="待收总额"
+                    android:textColor="@color/my_pf2_content_text_color"
+                    android:textSize="@dimen/my_pf2_content_text_size"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical|right"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:text="¥"
+                        android:textSize="9dp"
+                        android:textColor="@color/my_pf2_content_text_color"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0.00"
+                        android:textColor="@color/my_pf2_content_text_color"
+                        android:textSize="@dimen/my_pf2_content_text_size"/>
+
+                </LinearLayout>
+
+
+            </android.support.percent.PercentFrameLayout>
+
+            <android.support.percent.PercentFrameLayout
+                android:layout_width="match_parent"
+                app:layout_heightPercent="60%"
+                app:layout_marginTopPercent="35%"
+                android:padding="5dp"
+                android:background="#faff">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rl_my_information"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                </android.support.v7.widget.RecyclerView>
+
+
+            </android.support.percent.PercentFrameLayout>
 
 
         </android.support.percent.PercentFrameLayout>
