--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -22,4 +22,18 @@
 
     <!--manage-->
     <dimen name="manage_content_item_text_size_1">12dp</dimen>
+
+    <dimen name="manage_content_item_text_size_2">17dp</dimen>
+    <dimen name="manage_content_item_text_size_2_1">10dp</dimen>
+
+    <dimen name="manage_content_item_text_size_3">18dp</dimen>
+
+
+    <!--my-->
+    <dimen name="my_pf1_content_text_size_1">13dp</dimen>
+    <dimen name="my_pf1_content_text_size_2">18dp</dimen>
+
+    <dimen name="my_pf2_content_text_size">15dp</dimen>
+
+
 </resources>
